<resources>
    <string name="app_name">NewsAppJava</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Home</string>
    <string name="menu_sport">Sport</string>
    <string name="menu_science">Science</string>
    <string name="menu_business">Business</string>
    <string name="menu_world">Technology</string>
    <string name="menu_fashion">Politics</string>
    <string name="nav_settings">Settings</string>
    <string name="logout">Exit</string>
    <string name="font_size">Font Size</string>
    <string name="background_color">Background Color</string>
    <string name="dark_mode">Dark Mode</string>

</resources>