<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sport"
            android:icon="@drawable/ic_baseline_sports_soccer_24"
            android:title="Sport" />
        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/ic_baseline_science_24"
            android:title="@string/menu_science" />

        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_baseline_business_24"
            android:title="@string/menu_business"/>

        <item
            android:id="@+id/nav_world"
            android:icon="@drawable/baseline_public_black_24"
            android:title="@string/menu_world"/>

        <item
            android:id="@+id/nav_fashion"
            android:icon="@drawable/baseline_diamond_black_24"
            android:title="@string/menu_fashion"/>

        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"/>
    </group>
</menu>